Fix code issues 2026.q2